--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@headlessui/react": "^1.7.18",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
+    "react-grid-gallery": "^1.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-masonry-css": "^1.0.16",
+    "react-parallax": "^3.5.1",
+    "react-photo-album": "^2.3.1",
+    "typewriter-effect": "^2.21.0",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
